Fix alignment issue between page content and fixed divs.

--- a/template/css/main.css
+++ b/template/css/main.css
@@ -6,7 +6,7 @@
 }
 
 html, body {
-  /*  margin: 0;*/
+    margin: 0;
   /*  padding: 0;*/
   margin-top: 0;
   width: 100%;
@@ -28,7 +28,7 @@ p {
   background-color: var(--content-bg-color);
   margin-left: auto;
   margin-right: auto;
-	width: 100%;
+  width: 100%;
   height: 100vh;
   padding-top: 1px;
   padding: 15px;
@@ -207,6 +207,10 @@ p {
 }
 
 @media (min-width: 768px) {
+	body {
+		margin-left: 8px;
+		margin-right: 8px;
+	}
 	.content {
 		width: calc(100vh * 9 / 16);
         max-width: 100%; 
